--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -187,8 +187,6 @@ h5 {
   margin-bottom:50px;
 }
 
-
-
 .home-hero {
   background:url('@{imagePath}/orange_polygon.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -261,7 +259,6 @@ h5 {
   padding: 20px 10px 20px;
   color: @color-orange;
   font-weight: 700;
-  width: 350px;
   font-size:16px;
   letter-spacing: 4px;
   text-align: left;
@@ -415,29 +412,6 @@ h5 {
 
 }
 
-.flex-4-column {
-  padding: 0;
-  margin-left: 40px;
-  margin-right: 40px;
-  list-style: none;
-  display: flex;
-  flex-flow: row nowrap;
-
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-
-  -webkit-flex-direction: row;
-  justify-content: center;
-  border: 1px solid red;
-
-  p {
-    margin:0;
-  }
-
-}
 
 .flex-wrap {
   padding: 0;
@@ -463,7 +437,7 @@ h5 {
 
 }
 
-.flex-2-column {
+.flex-column {
   padding: 0;
   margin-left: 40px;
   margin-right: 40px;
@@ -482,7 +456,6 @@ h5 {
   border: 1px solid red;
 
   p {
-
     margin:0;
   }
 
@@ -491,13 +464,20 @@ h5 {
 .column-item {
   display: flex;
   padding:20px 10px 20px;
-  width: 350px;
   line-height: 12px;
   color: #000;
   font-weight: 100;
   font-size: 12px;
   text-align: left;
   border: 1px solid red;
+
+  .flex-4-column & {
+    width: 25%;
+  }
+
+  .flex-2-column & {
+    width: 50%;
+  }
 }
 
 .column-image {
@@ -542,37 +522,23 @@ h5 {
 
 }
 
-.column-item-dark {
-  display: flex;
-  padding:20px 10px 20px;
-  width: 350px;
+.column-dark {
   line-height: 12px;
   color: @white;
   font-weight: 100;
   font-size: 12px;
   text-align: left;
 
+  .form-horizontal {
+    width: 100%;
+  }
 }
-.column-item-dark-form {
-  display: flex;
-  padding:20px 0px 0px;
-  width: 350px;
-  line-height: 12px;
-  color: @white;
-  font-weight: 100;
-  font-size: 12px;
-
-}
-
 
 .flex-page-header {
   padding: 0;
-  margin-left: 40px;
-  margin-right: 40px;
   list-style: none;
   display: flex;
   flex-flow: row nowrap;
-
 
   display: -webkit-box;
   display: -moz-box;
@@ -582,23 +548,20 @@ h5 {
 
   -webkit-flex-direction: row;
 
-
-
   p {
     margin:0;
   }
 
-.column-page-header {
-  display: flex;
-  padding: 20px 10px 20px;
-  color: @color-orange;
-  font-weight: 700;
-  margin-top: 40px;
-  margin-bottom: 20px;
-  font-size:46px;
-  letter-spacing: 0px;
-  width: auto;
-
+  .column-page-header {
+    display: flex;
+    padding: 20px 10px 20px;
+    color: @color-orange;
+    font-weight: 700;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size:46px;
+    letter-spacing: 0px;
+    width: auto;
   }
 
 }
