--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -2,144 +2,128 @@
 	<div class="container">
 		<h1 class="home-hero-punchline">24HOUR LIME. DIGITAL DESIGN.</h1>
 	</div>
-<div class="block">
-	<ul class="flex-container">
-		<li class="block-item">
-			<div class="verticalline">
-			</div>
-		<a href="/Work">
-			<div class="boldnumbers"><b>01</b>
-					<div class ="homenav">WORK</div></a>
-			</div>
-		</li>
-		<li class="block-item">
-			<div class="verticalline">
-			</div>
-		<a data-scroll href="#About">
-			<div class="boldnumbers"><b>02</b>
-				<div class ="homenav">ABOUT</div></a>
-			</div>
-		</li>
-		<li class="block-item">
-			<div class="verticalline">
-			</div>
-		<a href="/Journal">
-			<div class="boldnumbers"><b>03</b>
-				<div class ="homenav">JOURNAL</div></a>
-			</div>
-		</li>
-		<li class="block-item">
-			<div class="verticalline">
-			</div>
-		<a data-scroll href="#Contact">
-			<div class="boldnumbers"><b>04</b>
-				<div class ="homenav">CONTACT</div></a>
-			</div>
-		</li>
-	</ul>
+
+	<div class="block">
+		<ul class="flex-container">
+			<li class="block-item">
+				<div class="verticalline"></div>
+				<a href="/Work">
+					<div class="boldnumbers">
+						<b>01</b>
+						<div class="homenav">WORK</div>
+					</div>
+				</a>
+			</li>
+
+			<li class="block-item">
+				<div class="verticalline"></div>
+				<a data-scroll href="#About">
+					<div class="boldnumbers">
+						<b>02</b>
+						<div class="homenav">ABOUT</div>
+					</div>
+				</a>
+			</li>
+
+			<li class="block-item">
+				<div class="verticalline"></div>
+				<a href="/Journal">
+					<div class="boldnumbers">
+						<b>03</b>
+						<div class ="homenav">JOURNAL</div>
+					</div>
+				</a>
+			</li>
+
+			<li class="block-item">
+				<div class="verticalline"></div>
+				<a data-scroll href="#Contact">
+					<div class="boldnumbers">
+						<b>04</b>
+						<div class ="homenav">CONTACT</div>
+					</div>
+				</a>
+			</li>
+		</ul>
+	</div>
 </div>
-</div>
 
 
 
-<ul class="flex-4-column">
-	<li class="column-page-header">
+<ul class="flex-column flex-2-column">
+	<li class="column-item">
 		<h2 id="About" class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
 	</li>
-	<li class="column-item">
-		<p>
+	<li class="column-item"></li>
+</ul>
 
+<ul class="flex-column flex-4-column">
+  <li class="column-item">
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			<br><br><br><br>
+			<img src="/_themes/24hl/img/portrait.jpg" alt="me smiling!">
+			<br><br><br><br>
 		</p>
 	</li>
 	<li class="column-item">
 		<p>
-
+			<b>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio.
+			</b>
 		</p>
 	</li>
-	<li class="column-item">
-		<p>
+	<li class="column-item"></li>
+	<li class="column-item"></li>
 
+</ul>
+<ul class="flex-column flex-4-column">
+	<li class="column-item">
+		<p>Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.<br><br>
+Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. <br><br>Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
+		Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.<br><br>
+		Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum.
+		</p>
+	</li>
+	<li class="column-image">
+		<p>
+			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
+		</p>
+	</li>
+	<li class="column-image">
+		<p>
+			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
+		</p>
+	</li>
+	<li class="column-image">
+		<p>
+			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
 		</p>
 	</li>
 </ul>
-	<ul class="flex-4-column">
-	  <li class="column-item">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br><br><br>
-				<img src="/_themes/24hl/img/portrait.jpg" alt="me smiling!"><br><br><br><br>
 
-			</p>
-		</li>
-		<li class="column-item">
-			<p><b>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio.
-		</p></b>
-
-		</li>
-		<li class="column-item">
-			<p>
-
-			</p>
-		</li>
-		<li class="column-item">
-			<p>
-
-			</p>
-		</li>
-
-	</ul>
-	<ul class="flex-4-column">
-		<li class="column-item">
-			<p>Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.<br><br>
-Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. <br><br>Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
-			Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.<br><br>
-			Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum.
-			</p>
-		</li>
-		<li class="column-image">
-			<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
-		</p>
-		</li>
-		<li class="column-image">
-			<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
-		</p>
-		</li>
-		<li class="column-image">
-			<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
-		</p>
-		</li>
-
-	</ul>
 <div class="page-seperator"></div>
-<ul class="flex-4-column">
+
+<ul class="flex-column flex-4-column">
 	<li class="column-item">
-		<p><b>logo logo logo logo</b></p><br>
-
-
-	</li>
-	<li class="column-item">
-		<p><b>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio.
-		<br><br><br><br><br><br><br><br><br><br>
-	</p></b>
-
+		<p>
+			<b>logo logo logo logo</b>
+		</p>
+		<br>
 	</li>
 	<li class="column-item">
 		<p>
-
+			<b>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio.
+				<br><br><br><br><br><br><br><br><br><br>
+			</b>
 		</p>
 	</li>
-	<li class="column-item">
-		<p>
-
-		</p>
-	</li>
-
+	<li class="column-item"></li>
+	<li class="column-item"></li>
 </ul>
 
 <div class="contact-background">
@@ -155,135 +139,104 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 		</ul>
 	</nav>
 
-	<ul class="flex-4-column">
+	<ul class="flex-column flex-2-column">
 		<li class="column-item">
 			<h2 id="Contact" class="flex-page-header">LET'S WORK TOGETHER</h2>
 		</li>
-		<li class="column-item">
-			<p>
-
-			</p>
-		</li>
-		<li class="column-item">
-			<p>
-
-			</p>
-		</li>
-
-
-	<li class="column-item">
-		<p>
-
-		</p>
-	</li>
+		<li class="column-item"></li>
 	</ul>
 
-	<ul class="flex-2-column">
+	<ul class="flex-column flex-4-column">
 
-	  <li class="column-item-dark">
+	  <li class="column-item column-dark">
 			<p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. </b><br><br>
 			Lorem ipsum dolor sit amet, Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. <br><br>Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.
 			Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. <br><br>Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
 			Lorem ipsum dolor sit amet, Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. <br><br>Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.
 			Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. <br><br>Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
 			</p>
-			</li>
-		<li class="column-item-dark-form">
+		</li>
+		<li class="column-item column-dark">
+			{{ if {raven:success} }}
+				<h1>Thanks!</h1>
+				{{ success_message }}
+			{{ else }}
 
 
-				{{ if {raven:success} }}
-					<h1>Thanks!</h1>
-					{{ success_message }}
-				{{ else }}
+				{{ content }}
 
+				{{ raven:errors }}
 
-					{{ content }}
+					{{ if missing }}
+					<div class="error-block">
+						<h2>Missing fields:</h2>
+						<ul>
+							{{ missing }}
+								<li><strong>{{ field }}</strong></li>
+							{{ /missing }}
+						</ul>
+					</div>
+					{{ endif }}
 
-					{{ raven:errors }}
+					{{ if invalid }}
+					<div class="error-block">
+						<h2>Invalid fields:</h2>
+						<ul>
+							{{ invalid }}
+								<li><strong>{{ field }}</strong>: {{ message }}</li>
+							{{ /invalid }}
+						</ul>
+					</div>
+					{{ endif }}
 
-						{{ if missing }}
-						<div class="error-block">
-							<h2>Missing fields:</h2>
-							<ul>
-								{{ missing }}
-									<li><strong>{{ field }}</strong></li>
-								{{ /missing }}
-							</ul>
-						</div>
-						{{ endif }}
+				{{ /raven:errors }}
 
-						{{ if invalid }}
-						<div class="error-block">
-							<h2>Invalid fields:</h2>
-							<ul>
-								{{ invalid }}
-									<li><strong>{{ field }}</strong>: {{ message }}</li>
-								{{ /invalid }}
-							</ul>
-						</div>
-						{{ endif }}
-
-					{{ /raven:errors }}
-
-					{{ raven:form formset="contact" attr="class:form-horizontal" }}
-
-						<div class="form-group">
-							<label for="name" class="col-sm-3 control-label">Name</label>
-							<div class="col-sm-9">
-								<input class="form-control" type="text" id="firstname" name="firstname" placeholder="First Name" value="" />
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label for="name" class="col-sm-3 control-label">Company</label>
-							<div class="col-sm-9">
-								<input class="form-control" type="text" id="surname" name="surname" placeholder="Surname" value="" />
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label for="email" class="col-sm-3 control-label">Email</label>
-							<div class="col-sm-9">
-								<input class="form-control" type="email" id="email" name="email" placeholder="Email" value="" />
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label for="name" class="col-sm-3 control-label">Phone</label>
-							<div class="col-sm-9">
-								<input class="form-control" type="text" id="postcode" name="postcode" placeholder="Postcode" value="" />
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label for="message" class="col-sm-3 control-label">Message</label>
-							<div class="col-sm-9">
-								<textarea input class="form-control" type="text" id="phone" textarea name="message" rows="3" textarea placeholder="Message" value="" /></textarea>
-							</div>
-
-
-						<div class="form-group">
-								<div class="col-sm-offset-6 col-sm-6">
-									<button class="btn btn-md btn-primary" type="submit">Submit</button>
-								</div>
+				{{ raven:form formset="contact" attr="class:form-horizontal" }}
+					<div class="form-group">
+						<label for="name" class="col-sm-3 control-label">Name</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" id="firstname" name="firstname" placeholder="First Name" value="" />
 						</div>
 					</div>
 
-					{{ /raven:form }}
-				{{ endif }}
+					<div class="form-group">
+						<label for="name" class="col-sm-3 control-label">Company</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" id="surname" name="surname" placeholder="Surname" value="" />
+						</div>
+					</div>
 
+					<div class="form-group">
+						<label for="email" class="col-sm-3 control-label">Email</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="email" id="email" name="email" placeholder="Email" value="" />
+						</div>
+					</div>
 
+					<div class="form-group">
+						<label for="name" class="col-sm-3 control-label">Phone</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" id="postcode" name="postcode" placeholder="Postcode" value="" />
+						</div>
+					</div>
 
+					<div class="form-group">
+						<label for="message" class="col-sm-3 control-label">Message</label>
+						<div class="col-sm-9">
+							<textarea input class="form-control" type="text" id="phone" textarea name="message" rows="3" textarea placeholder="Message" value="" /></textarea>
+						</div>
+					</div>
 
-			</li>
-			<li class="column-item-dark">
-			<p>
-			</p>
-			</li>
-			<li class="column-item-dark">
-			<p>
-			</p>
-			</li>
+					<div class="form-group">
+						<div class="col-sm-offset-6 col-sm-6 text-right">
+							<button class="btn btn-md btn-primary" type="submit">Submit</button>
+						</div>
+					</div>
+				{{ /raven:form }}
+			{{ endif }}
+		</li>
+		<li class="column-item"></li>
+		<li class="column-item"></li>
 	</ul>
 
 
