--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -59,12 +59,14 @@
 
 <ul class="flex-column flex-4-column">
   <li class="column-item">
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			<br><br><br><br>
+		<div>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+		</div>
+		<div class="align-center jarrods-face">
 			<img src="/_themes/24hl/img/portrait.jpg" alt="me smiling!">
-			<br><br><br><br>
-		</p>
+		</div>
 	</li>
 	<li class="column-item">
 		<p>
@@ -85,19 +87,19 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 		Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum.
 		</p>
 	</li>
-	<li class="column-image">
+	<li class="column-item column-no-padding">
 		<p>
 			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
 			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
 		</p>
 	</li>
-	<li class="column-image">
+	<li class="column-item column-no-padding">
 		<p>
 			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
 			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
 		</p>
 	</li>
-	<li class="column-image">
+	<li class="column-item column-no-padding">
 		<p>
 			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
 			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
