--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -116,19 +116,16 @@ img {
 
 .nav-dark {
   padding-top: 25px;
-  width: 50%;
   margin: 0 auto;
   padding-bottom: 50px;
-
-
   list-style:none;
+  text-align:center;
 
   > li {
-
-    float:left;
+    display:inline-block;
 
     > a {
-      display:block;
+      display:inline-block;;
       padding:10px 50px 15px;
       color:#fff;
 
@@ -328,7 +325,17 @@ h5 {
   a {
     color:@white;
   }
+
+  .page-Journal & {
+    position: fixed;
+    overflow:hidden;
+    left:0;
+    right:0;
+    bottom:0;
+  }
 }
+
+
 
 
 .footer-overview {
@@ -383,10 +390,7 @@ h5 {
   letter-spacing: 4px;
   font-size: 1.5em;
   text-align: left;
-
 }
-
-
 
 .flex-container {
   padding: 0;
@@ -462,7 +466,6 @@ h5 {
 }
 
 .column-item {
-  display: flex;
   padding:20px 10px 20px;
   line-height: 12px;
   color: #000;
@@ -470,6 +473,15 @@ h5 {
   font-size: 12px;
   text-align: left;
   border: 1px solid red;
+
+
+  &.column-no-padding {
+    padding:0;
+
+    img {
+      width: 100% !important;
+    }
+  }
 
   .flex-4-column & {
     width: 25%;
@@ -480,35 +492,19 @@ h5 {
   }
 }
 
-.column-image {
-  display: flex;
-  padding:20px 10px 20px;
-  width: 350px;
-  line-height: 12px;
-  color: #000;
-  font-weight: 100;
-  font-size: 12px;
-  text-align: left;
-  border: 1px solid red;
+.jarrods-face {
+  margin-top:20px;
 }
 
 // need to fix this shit
 .journal-nav {
   padding: 25px 5px 5px 5px;
-  position: absolute;
   top: 0px;
-  width: 100%;
   margin: 0 auto;
-
 }
 
 .journal-layout {
   padding: 90px 10px 10px 10px;
-  position: absolute;
-  top: 120px;
-  left: 0px;
-
-
 }
 
 .journal-container {
@@ -519,7 +515,6 @@ h5 {
 
     color: #fff;
   }
-
 }
 
 .column-dark {
@@ -572,9 +567,13 @@ h5 {
 /* ---- particles.js container ---- */
 
 #particles-js{
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  z-index: -1;
+
   background-color: #0f0203;
   background-image: url('');
   background-size: cover;
