--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -2,14 +2,12 @@
 
 <!-- particles.js container -->
 
-<div id="particles-js">
+<div id="particles-js"></div>
 
 
-  <!-- scripts -->
-  <script src="/_themes/24hl/js/particles.js"></script>
-  <script src="/_themes/24hl/js/app.js"></script>
-
-
+<!-- scripts -->
+<script src="/_themes/24hl/js/particles.js"></script>
+<script src="/_themes/24hl/js/app.js"></script>
 
 <div class="journal-nav">
   <nav class="block-navigation">
@@ -26,38 +24,20 @@
   </nav>
 </div>
 
-
-
-
-  <div class="journal-layout">
-    <ul class="flex-4-column">
-    	<li class="column-page-header">
-    		<h2 class="page-header">24HOUR JOURNAL</h2>
-        <p class="column-item-dark"><b>Stuff and things, mostly daily, sometimes not.</b></p>
-    	</li>
-    	<li class="column-item">
-    		<p>
-
-    		</p>
-    	</li>
-    	<li class="column-item">
-    		<p>
-
-    		</p>
-    	</li>
-    	<li class="column-item">
-    		<p>
-
-    		</p>
-    	</li>
-    </ul>
-    <div class="page-seperator-dark">
-    </div>
-
+<div class="journal-layout">
+  <ul class="flex-column flex-2-column">
+  	<li class="column-item">
+  		<h2 class="page-header">24HOUR JOURNAL</h2>
+      <p class="column-item-dark"><b>Stuff and things, mostly daily, sometimes not.</b></p>
+  	</li>
+  	<li class="column-item"></li>
+  </ul>
+  <div class="container">
+    <div class="page-seperator-dark"></div>
+  </div>
+  <div class="row">
     <div class="col-md-offset-3 col-md-6">
       <div class="journal-container">
-
-
         {{ content }}
 
         {{ entries:listing folder="blog" limit="5" }}
@@ -68,3 +48,4 @@
       </div>
     </div>
   </div>
+</div>
