--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -262,6 +262,18 @@ h5 {
 
 }
 
+.page-header-2 {
+  padding: 0px 10px 20px;
+  line-height: 12px;
+  color: @color-orange;
+  font-weight: 700;
+  font-size:12px;
+  letter-spacing: 4px;
+  text-align: left;
+  top: 0;
+
+}
+
 .home-number {
     color: #fff;
     font-weight: 700;
