--- a/_themes/24hl/templates/work.html
+++ b/_themes/24hl/templates/work.html
@@ -1,13 +1,13 @@
 <!-- top blurb and header bit -->
 <ul class="flex-column flex-4-column">
 	<li class="column-item">
-		<h2>CLIENT WORK</h2>
+		<p class="page-header-2">CLIENT WORK</p>
 	</li>
 	<li class="column-item">
-		<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fermentum lobortis porta. Mauris faucibus hendrerit pulvinar. Pellentesque sagittis, enim eu ornare dapibus, ligula nibh fermentum mauris, nec interdum lorem ante vel nunc.</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fermentum lobortis porta. Mauris faucibus hendrerit pulvinar. Pellentesque sagittis, enim eu ornare dapibus, ligula nibh fermentum mauris, nec interdum lorem ante vel nunc.</p>
 	</li>
 	<li class="column-item">
-		<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fermentum lobortis porta. Mauris faucibus hendrerit pulvinar. Pellentesque sagittis, enim eu ornare dapibus, ligula nibh fermentum mauris, nec interdum lorem ante vel nunc.</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fermentum lobortis porta. Mauris faucibus hendrerit pulvinar. Pellentesque sagittis, enim eu ornare dapibus, ligula nibh fermentum mauris, nec interdum lorem ante vel nunc.</p>
 	</li>
 	<li class="column-item"></li>
 </ul>
