some light tetris

--- a/_themes/24hl/templates/work.html
+++ b/_themes/24hl/templates/work.html
@@ -69,6 +69,35 @@
 	</li>
 </ul>
 
+<ul class="flex-column flex-4-column">
+	<li class="column-item column-no-padding">
+		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+		<p>
+			<br>
+			This is some text
+		</p>
+	</li>
+	<li class="column-item column-no-padding">
+		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+		<p>
+			<br>
+			This is some text
+		</p>
+	</li>
+	<li class="column-item column-no-padding">
+		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+		<p>
+			<br>This is some text
+		</p>
+	</li>
+	<li class="column-item column-no-padding">
+		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+		<p>
+			<br>This is some text
+		</p>
+	</li>
+</ul>
+
 <div class="flex-column flex-4-column">
   {{ files }}
 		<li class="column-item column-no-padding">
