--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2600,6 +2600,7 @@ img {
 }
 .nav-main {
   margin: 0;
+  margin-bottom: 50px;
   list-style: none;
 }
 .nav-main > li {
@@ -2746,7 +2747,6 @@ h5 {
   font-size: 12px;
   letter-spacing: 4px;
   text-align: left;
-  top: 0;
 }
 .home-number {
   color: #fff;
@@ -2890,6 +2890,7 @@ h5 {
   padding: 0;
   margin-left: 40px;
   margin-right: 40px;
+  margin-bottom: 50px;
   list-style: none;
   flex-flow: row nowrap;
   display: -webkit-box;
