--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -72,6 +72,7 @@ img {
 
 .nav-main {
   margin: 0;
+  margin-bottom: 50px;
 
 
   list-style:none;
@@ -270,7 +271,7 @@ h5 {
   font-size:12px;
   letter-spacing: 4px;
   text-align: left;
-  top: 0;
+
 
 }
 
@@ -457,6 +458,7 @@ h5 {
   padding: 0;
   margin-left: 40px;
   margin-right: 40px;
+  margin-bottom: 50px;
   list-style: none;
   display: flex;
   flex-flow: row nowrap;
