--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2671,6 +2671,9 @@ h5 {
   font-weight: 100;
   color: #fff;
 }
+h6 {
+  color: #fa6022;
+}
 .nav-parent {
   font-weight: bold;
   border-bottom: solid 3px #333333;
