--- a/_themes/24hl/templates/work.html
+++ b/_themes/24hl/templates/work.html
@@ -13,101 +13,15 @@
 </ul>
 
 <!-- content bit -->
-<ul class="flex-column flex-4-column">
-	<li class="column-item column-no-padding">
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		<p>
-			<br>
-			This is some text
-		</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		<p>
-			<br>
-			This is some text
-		</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		<p>
-			<br>This is some text
-		</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		<p>
-			<br>This is some text
-		</p>
-	</li>
-</ul>
-
-<ul class="flex-column flex-4-column">
-	<li class="column-item column-no-padding">
-		<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<br>This is some text
-		</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<br>This is some text
-		</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<br>This is some text
-			</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<br>This is some text
-		</p>
-	</li>
-</ul>
-
-<ul class="flex-column flex-4-column">
-	<li class="column-item column-no-padding">
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		<p>
-			<br>
-			This is some text
-		</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		<p>
-			<br>
-			This is some text
-		</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		<p>
-			<br>This is some text
-		</p>
-	</li>
-	<li class="column-item column-no-padding">
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		<p>
-			<br>This is some text
-		</p>
-	</li>
-</ul>
-
-<div class="flex-column flex-4-column">
-  {{ files }}
-		<li class="column-item column-no-padding">
-			<p>
-				<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-				{{ title }}
-			</p>
-		</li>
-    <a class="list-file" href="{{ filePath }}">
-      {{ title }} {{ description }}
-    </a>
-  {{ /files }}
+<div class="flex-wrap flex-4-column">
+	{{ entries:listing folder="assets/img/gallery" }}
+  	{{ get_files in="assets/img/gallery" limit="10"}}
+			<li class="column-item column-no-padding">
+				<a href="{{ url }}">
+					<img src="{{ transform src='{{ file }}' width='350' height='220' action='smart' }}">
+	  			{{ title }}
+				</a>
+			</li>
+		{{ /get_files }}
+	{{ /entries:listing }}
 </div>
