--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -13,13 +13,11 @@
   <nav class="block-navigation">
     <ul class="nav nav-dark" role="navigation">
       <li><a href="/">HOME</a>
-      {{ nav from="/" }}
-        <li {{ if is_current || is_parent }} class="nav-active"{{ endif }}>
-          <a href="{{ url }}">
-            {{ title }}
-          </a>
-        </li>
-      {{ /nav }}
+        <li><a href="/Work">WORK</a>
+        <li><a href="/#About">ABOUT</a>
+        <li class="nav-active"><a href="/Journal">JOURNAL</a>
+        <li><a href="/#Contact">CONTACT</a>
+      </li>
     </ul>
   </nav>
 </div>
