--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -254,7 +254,7 @@ h5 {
 }
 .page-header {
   display: flex;
-  padding: 20px 10px 20px;
+  padding: 20px 10px 0px;
   color: @color-orange;
   font-weight: 700;
   font-size:16px;
@@ -264,7 +264,7 @@ h5 {
 }
 
 .page-header-2 {
-  padding: 0px 10px 20px;
+  padding: 0px 10px 0px;
   line-height: 12px;
   color: @color-orange;
   font-weight: 700;
@@ -374,10 +374,9 @@ h5 {
 .page-seperator-dark {
   border-bottom: 1px solid;
   color: #fff;
-  padding: 10px 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  padding: 0px 30px 30px;
   opacity: 0.3;
+  width: 100%;
 }
 
 .contact-details {
@@ -458,7 +457,7 @@ h5 {
   padding: 0;
   margin-left: 40px;
   margin-right: 40px;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   list-style: none;
   display: flex;
   flex-flow: row nowrap;
@@ -504,6 +503,9 @@ h5 {
   .flex-2-column & {
     width: 50%;
   }
+  .flex-1-column & {
+    width: 100%;
+  }
 }
 
 .jarrods-face {
@@ -518,7 +520,7 @@ h5 {
 }
 
 .journal-layout {
-  padding: 90px 10px 10px 10px;
+  padding: 0px 10px 10px 10px;
 }
 
 .journal-container {
