--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -22,15 +22,16 @@
   </nav>
 </div>
 
+
 <div class="journal-layout">
   <ul class="flex-column flex-2-column">
   	<li class="column-item">
-  		<h2 class="page-header">24HOUR JOURNAL</h2>
-      <p class="column-item-dark"><b>Stuff and things, mostly daily, sometimes not.</b></p>
+  		<h2 class="page-header-2">24HOUR JOURNAL</h2>
+      <p class="column-item column-dark"><b>Stuff and things, mostly daily, sometimes not.</b></p>
   	</li>
   	<li class="column-item"></li>
   </ul>
-  <div class="container">
+  <div class="flex-column flex-1-column">
     <div class="page-seperator-dark"></div>
   </div>
   <div class="row">
@@ -46,4 +47,3 @@
       </div>
     </div>
   </div>
-</div>
