--- a/_themes/24hl/layouts/work.html
+++ b/_themes/24hl/layouts/work.html
@@ -31,16 +31,12 @@
         <nav class="block-navigation">
           <ul class="nav nav-main" role="navigation">
             <li><a href="/">HOME</a>
-            {{ nav from="/" }}
-
-              <li {{ if is_current || is_parent }} class="nav-active"{{ endif }}>
-                <a href="{{ url }}">
-                  {{ title }}
-                </a>
-              </li>
-            {{ /nav }}
+            <li class="nav-active"><a href="/Work">WORK</a>
+            <li><a href="/#About">ABOUT</a>
+            <li><a href="/Journal">JOURNAL</a>
+            <li><a href="/#Contact">CONTACT</a>
+            </li>
           </ul>
-
         </nav>
       </div>
     </header>
