--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -498,7 +498,7 @@ h5 {
 
   .flex-4-column & {
     width: 25%;
-  }
+    }
 
   .flex-2-column & {
     width: 50%;
@@ -506,6 +506,10 @@ h5 {
   .flex-1-column & {
     width: 100%;
   }
+  .flexgrow & {
+    flex-grow: 2;
+  }
+
 }
 
 .jarrods-face {
