--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -34,8 +34,9 @@
   <div class="flex-column flex-1-column">
     <div class="page-seperator-dark"></div>
   </div>
-  <div class="row">
-    <div class="col-md-offset-3 col-md-6">
+  <div class="flex-column flex-4-column">
+    <li class="column-item column-dark"></li>
+    <li class="column-item flexgrow">
       <div class="journal-container">
         {{ content }}
 
@@ -45,5 +46,8 @@
         {{ content }}<br><br>
         {{ /entries:listing }}
       </div>
+
+      <li class="column-item"></li>
+
     </div>
   </div>
