centered work page nav

--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2601,6 +2601,8 @@ img {
 .nav-main {
   margin: 0;
   margin-bottom: 50px;
+  padding: 0;
+  text-align: center;
   list-style: none;
 }
 .nav-main > li {
