journal page stuff

--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -507,10 +507,11 @@ h5 {
   .flex-1-column & {
     width: 100%;
   }
-  .flexgrow & {
-    flex-grow: 2;
-  }
 
+}
+
+.flexgrow {
+  flex-grow: 3;
 }
 
 .jarrods-face {
