--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2930,8 +2930,8 @@ h5 {
 .flex-1-column .column-item {
   width: 100%;
 }
-.flexgrow .column-item {
-  flex-grow: 2;
+.flexgrow {
+  flex-grow: 3;
 }
 .jarrods-face {
   margin-top: 20px;
