--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -265,11 +265,11 @@ h5 {
 }
 
 .page-header-2 {
-  padding: 0px 10px 0px;
-  line-height: 12px;
+  padding: 0;
+  line-height: 18px;
   color: @color-orange;
   font-weight: 700;
-  font-size:12px;
+  font-size:18px;
   letter-spacing: 4px;
   text-align: left;
 
