--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -27,7 +27,7 @@
   <ul class="flex-column flex-2-column">
   	<li class="column-item">
   		<h2 class="page-header-2">24HOUR JOURNAL</h2>
-      <p class="column-item column-dark"><b>Stuff and things, mostly daily, sometimes not.</b></p>
+      <h5><b>Stuff and things, mostly daily, sometimes not.</b></h5>
   	</li>
   	<li class="column-item"></li>
   </ul>
@@ -35,7 +35,7 @@
     <div class="page-seperator-dark"></div>
   </div>
 
-    <div class="flex-column flex-4-column">
+    <div class="flex-column flex-2-column">
       <li class="flexgrow">
         <div class="journal-container">
           <div class="row">
@@ -48,7 +48,7 @@
           <h5>{{ date }}</h5>
           </li>
           <li class="column-item column-dark">
-        <h4><a href="{{ url }}">{{ title }}</a></h4>
+        <h4><a href="{{ url }}"><b>{{ title }}</b></a></h4>
         {{ content }}<br><br>
       </ul></div>
         {{ /entries:listing }}
