--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -510,6 +510,28 @@ h5 {
 
 }
 
+.journal-date {
+  padding:20px 10px 20px;
+  line-height: 12px;
+  color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+  border: 1px solid red;
+  width: 25%;
+}
+.journal-item {
+  padding:20px 10px 20px;
+  line-height: 12px;
+  color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+  border: 1px solid red;
+  width: 75%;
+}
+
+
 .flexgrow {
   flex-grow: 3;
 }
@@ -541,15 +563,19 @@ h5 {
 
 .column-dark {
   line-height: 12px;
+  padding-bottom: 50px;
   color: @white;
   font-weight: 100;
   font-size: 12px;
   text-align: left;
 
+
   .form-horizontal {
     width: 100%;
   }
 }
+
+
 
 .flex-page-header {
   padding: 0;
