--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2930,6 +2930,26 @@ h5 {
 .flex-1-column .column-item {
   width: 100%;
 }
+.journal-date {
+  padding: 20px 10px 20px;
+  line-height: 12px;
+  color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+  border: 1px solid red;
+  width: 25%;
+}
+.journal-item {
+  padding: 20px 10px 20px;
+  line-height: 12px;
+  color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+  border: 1px solid red;
+  width: 75%;
+}
 .flexgrow {
   flex-grow: 3;
 }
@@ -2953,6 +2973,7 @@ h5 {
 }
 .column-dark {
   line-height: 12px;
+  padding-bottom: 50px;
   color: #ffffff;
   font-weight: 100;
   font-size: 12px;
