late night layouts

--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -421,7 +421,7 @@ h5 {
 
   -webkit-flex-flow: row wrap;
   justify-content: flex-start;
-  border: 1px solid red;
+  //border: 1px solid red;
 
   p {
     margin:0;
@@ -446,7 +446,7 @@ h5 {
 
   -webkit-flex-direction: row;
   justify-content: flex-start;
-  border: 1px solid red;
+  //border: 1px solid red;
 
   p {
     margin:0;
@@ -471,7 +471,7 @@ h5 {
 
   -webkit-flex-direction: row;
   justify-content: center;
-  border: 1px solid red;
+  //border: 1px solid red;
 
   p {
     margin:0;
@@ -486,7 +486,7 @@ h5 {
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  border: 1px solid red;
+  //border: 1px solid red;
 
 
   &.column-no-padding {
@@ -517,17 +517,17 @@ h5 {
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  border: 1px solid red;
+  //border: 1px solid red;
   width: 25%;
 }
 .journal-item {
-  padding:20px 10px 20px;
+  padding:20px 50px 20px;
   line-height: 12px;
   color: #000;
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  border: 1px solid red;
+  //border: 1px solid red;
   width: 75%;
 }
 
