--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -347,6 +347,14 @@ h5 {
     right:0;
     bottom:0;
   }
+  .page-blog & {
+    position: fixed;
+    overflow:hidden;
+    left:0;
+    right:0;
+    bottom:0;
+  }
+
 }
 
 
@@ -446,7 +454,7 @@ h5 {
 
   -webkit-flex-direction: row;
   justify-content: flex-start;
-  //border: 1px solid red;
+  border: 1px solid red;
 
   p {
     margin:0;
@@ -471,7 +479,32 @@ h5 {
 
   -webkit-flex-direction: row;
   justify-content: center;
-  //border: 1px solid red;
+  border: 1px solid red;
+
+  p {
+    margin:0;
+  }
+
+}
+
+.flex-column-blog {
+  padding: 0;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+  list-style: none;
+  display: flex;
+  flex-flow: row nowrap;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-flex-direction: row;
+  justify-content: center;
+  border: 1px solid red;
 
   p {
     margin:0;
@@ -486,7 +519,7 @@ h5 {
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  //border: 1px solid red;
+  border: 1px solid red;
 
 
   &.column-no-padding {
@@ -517,7 +550,7 @@ h5 {
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  //border: 1px solid red;
+  border: 1px solid red;
   width: 25%;
 }
 .journal-item {
@@ -527,7 +560,7 @@ h5 {
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  //border: 1px solid red;
+  border: 1px solid red;
   width: 75%;
 }
 
@@ -561,6 +594,18 @@ h5 {
   }
 }
 
+.pagination-previous {
+  padding-top: 80px;
+  padding-left: 0;
+  text-align: left;
+  border: 1px solid red;
+}
+.pagination-next {
+  padding-top: 80px;
+  padding-right: 0;
+  text-align: right;
+  border: 1px solid red;
+}
 .column-dark {
   line-height: 12px;
   padding-bottom: 50px;
